latest changes - target

--- a/common/Tourpkgs.html
+++ b/common/Tourpkgs.html
@@ -12,31 +12,31 @@
     <table border="0" width="100%" style="text-align: center;border-top: hidden">
         <tr>
             <th>
-                <a href="galle.html">
+                <a href="galle.html" target="_blank">
                     <img src="../img/Tour%20Pkgs/shainee-fernando-RdZ6t41NmE0-unsplash.jpg" width="300" alt=""
                         style="box-shadow: 5px 5px 5px grey">
                 </a>
             </th>
             <th>
-                <a href="kandy.html">
+                <a href="kandy.html" target="_blank">
                     <img src="../img/Tour%20Pkgs/gettyimages-523287346-2048x20481.jpg" width="300" alt=""
                         style="box-shadow: 5px 5px 5px grey">
                 </a>
             </th>
             <th>
-                <a href="ella.html">
+                <a href="ella.html" target="_blank">
                     <img src="../img/Tour%20Pkgs/sri-lanka-photos-0429.jpg.optimal.jpg" width="300" alt=""
                         style="box-shadow: 5px 5px 5px grey">
                 </a>
             </th>
             <th>
-                <a href="jaffna.html">
+                <a href="jaffna.html" target="_blank">
                     <img src="../img/Tour%20Pkgs/louise-burton-fE6zZAyIwKU-unsplash.jpg" width="300" alt=""
                         style="box-shadow: 5px 5px 5px grey">
                 </a>
             </th>
             <th>
-                <a href="anuradhapura.html">
+                <a href="anuradhapura.html" target="_blank">
                     <img src="../img/Tour%20Pkgs/gettyimages-642791873-2048x20481.jpg" width="300" alt=""
                         style="box-shadow: 5px 5px 5px grey">
                 </a>
@@ -44,7 +44,7 @@
         </tr>
         <tr>
             <td>
-                <a href="galle.html" style="text-decoration: none"><span class="item-meta-field"
+                <a href="galle.html" style="text-decoration: none" target="_blank"><span class="item-meta-field"
                         style="font-size: 20px">Amazing Galle</span></a><br><br>
                 <p class="item-title">
                     <font color="grey">HISTORICAL & HERITAGE TOURS</font><br>
@@ -53,7 +53,7 @@
                 </p>
             </td>
             <td>
-                <a href="kandy.html" style="text-decoration: none"><span class="item-meta-field"
+                <a href="kandy.html" style="text-decoration: none" target="_blank"><span class="item-meta-field"
                         style="font-size: 20px">Beautiful Kandy</span></a><br><br>
                 <p class="item-title">
                     <font color="grey">CULTURAL TOURS</font><br>
@@ -62,7 +62,7 @@
                 </p>
             </td>
             <td>
-                <a href="ella.html" style="text-decoration: none"><span class="item-meta-field"
+                <a href="ella.html" style="text-decoration: none" target="_blank"><span class="item-meta-field"
                         style="font-size: 20px">Magnificent Ella</span></a><br><br>
                 <p class="item-title">
                     <font color="grey">HIKING & CAMPING TOURS</font><br>
@@ -71,7 +71,7 @@
                 </p>
             </td>
             <td>
-                <a href="jaffna.html" style="text-decoration: none"><span class="item-meta-field"
+                <a href="jaffna.html" style="text-decoration: none" target="_blank"><span class="item-meta-field"
                         style="font-size: 20px">Magical Jaffna</span></a><br><br>
                 <p class="item-title">
                     <font color="grey">PRIVATE DAY TRIPS</font><br>
@@ -80,7 +80,7 @@
                 </p>
             </td>
             <td>
-                <a href="anuradhapura.html" style="text-decoration: none"><span class="item-meta-field"
+                <a href="anuradhapura.html" style="text-decoration: none" target="_blank"><span class="item-meta-field"
                         style="font-size: 20px">Ancient Anuradhapura</span></a><br><br>
                 <p class="item-title">
                     <font color="grey">WALKING TOURS</font><br>
