--- a/common/contact us & footer.html
+++ b/common/contact us & footer.html
@@ -35,18 +35,18 @@
                 <td width="50%" style="text-align: left">
                     <font id="contact" color="white" size="5pt">Contact Us</font><br><br>
                     <font size="3pt" color="white">HOTLINE : +94 112 311 311 <br>
-                        email :-<a href="https://www.inquiries@travelgram.lk/"
+                        email :-<a href="mailto:inquiries@travelgram.lk"
                             style="text-decoration: none"> inquiries@travelgram.lk</a> <br>
                         Head Office :- No.504/1, Galle Road, Colombo 04</font><br><br>
-                    <a href="https://www.facebook.com/" style="vertical-align: middle"><img
+                    <a href="https://www.facebook.com/" style="vertical-align: middle" target="_blank"><img
                             src="../img/Social/Facebook.png" width="20"></a>&nbsp;
-                    <a href="https://plus.google.com/" style="vertical-align: middle"><img
+                    <a href="https://plus.google.com/" style="vertical-align: middle" target="_blank"><img
                             src="../img/Social/Google+.png" width="20"></a>&nbsp;
-                    <a href="https://www.instagram.com/" style="vertical-align: middle"><img
+                    <a href="https://www.instagram.com/" style="vertical-align: middle" target="_blank"><img
                             src="../img/Social/Instagram.png" width="20"></a>&nbsp;
-                    <a href="https://www.linkedin.com/" style="vertical-align: middle"><img
+                    <a href="https://www.linkedin.com/" style="vertical-align: middle" target="_blank"><img
                             src="../img/Social/Linkedin.png" width="20"></a>&nbsp;
-                    <a href="https://twitter.com/" style="vertical-align: middle"><img
+                    <a href="https://twitter.com/" style="vertical-align: middle" target="_blank"><img
                             src="../img/Social/Twitter.png" width="20"></a>
                 </td>
                 <td width="20%"></td>
@@ -54,9 +54,9 @@
                 <td width="80%" style="text-align: left">
                     <font id="contact" color="white" size="5pt">Links</font><br><br>
                     <font size="3pt" color="white"><a href="../index.html"
-                            style="text-decoration: none">Home</a><br>
-                        <a href="galle.html" style="text-decoration: none">Galle</a><br>
-                        <a href="kandy.html" style="text-decoration: none">Kandy</a><br>
+                            style="text-decoration: none" target="_blank">Home</a><br>
+                        <a href="galle.html" style="text-decoration: none" target="_blank">Galle</a><br>
+                        <a href="kandy.html" style="text-decoration: none" target="_blank">Kandy</a><br>
                     </font>
                 </td>
 
@@ -64,9 +64,9 @@
                 <td width="80%" style="text-align: left">
                     <font id="contact" color="white" size="5pt">Links</font><br><br>
                     <font size="3pt" color="white">
-                        <a href="ella.html" style="text-decoration: none">Ella</a><br>
-                        <a href="jaffna.html" style="text-decoration: none">Jaffna</a><br>
-                        <a href="anuradhapura.html" style="text-decoration: none">Anuradhapura</a><br>
+                        <a href="ella.html" style="text-decoration: none" target="_blank">Ella</a><br>
+                        <a href="jaffna.html" style="text-decoration: none" target="_blank">Jaffna</a><br>
+                        <a href="anuradhapura.html" style="text-decoration: none" target="_blank">Anuradhapura</a><br>
                     </font>
                 </td>
 
