--- a/common/anuradhapura.html
+++ b/common/anuradhapura.html
@@ -149,7 +149,7 @@
           <th height="40" colspan="2" style="font-size:12px; font-weight: 600;text-align: left;border-right:hidden">
           </th>
           <th width="419" height="40" colspan="3" style="font-size:13px; font-weight: 600;text-align: right"> &nbsp;
-            HOTLINE: +94 112 311 311 &nbsp;&nbsp;<a href="https://www.inquiries@travelgram.lk/"
+            HOTLINE: +94 112 311 311 &nbsp;&nbsp;<a href="mailto:inquiries@travelgram.lk"
               style="text-decoration: none">inquiries@travelgram.lk</a>&nbsp;&nbsp;
           </th>
 
