--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <title>TravelGram</title>
   <link rel="stylesheet" type="text/css" href="css/table.css">
   <link rel="stylesheet" type="text/css" href="css/styles.css">
-  <!-- <link rel="stylesheet" type="text/css" href="css/bootstrap-4.3.1.css"> -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 
@@ -21,7 +20,7 @@
           <th height="40" style="font-size:12px; font-weight: 600;text-align: left;border-right:hidden"><a id="myclass"
               href="#this" style="text-decoration: none;">&nbsp;&nbsp; ABOUT US &nbsp;&nbsp;</a></th>
           <th width="419" height="40" colspan="5" style="font-size:13px; font-weight: 600;text-align: right"> &nbsp;
-            HOTLINE: +94 112 311 311 &nbsp;&nbsp;<a href="https://www.inquiries@travelgram.lk/"
+            HOTLINE: +94 112 311 311 &nbsp;&nbsp;<a href="mailto:inquiries@travelgram.lk"
               style="text-decoration: none">inquiries@travelgram.lk</a>&nbsp;&nbsp;
           </th>
 
